# plx-md2xml

./: README.md  meson.build
src/: MarkdownReader.vala  PlxDocument.vala  linux.md  main.vala  meson.build
vapi/: libmarkdown.vapi
